<resources>
    <string name="app_name">Schwall BGM</string>
    <string name="title_übersicht">Übersicht</string>
    <string name="title_ausgang">Ausgang</string>
    <string name="title_eingang">Eingang</string>
    <string name="geraetename">Gerätename</string>
    <string name="geraet_scannen">Gerät scannen</string>
    <string name="bauleiter">Bauleiter</string>
    <string name="baustelle">Baustelle</string>
    <string name="geraeteausgang_bestaetigen">Geräteausgang bestätigen</string>
    <string name="testbild">testbild</string>
    <string name="bteingang">Geräteeingang bestätigen</string>
    <string name="polier">Polier</string>

</resources>