<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="413dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="testbild"
                android:src="@drawable/ruettelplatte" />

            <TextView
                android:id="@+id/tv_gerätename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/geraetename" />

            <Button
                android:id="@+id/bt_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/geraet_scannen" />

            <EditText
                android:id="@+id/et_Bauleiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/bauleiter" />

            <EditText
                android:id="@+id/et_Baustelle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/baustelle"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/bt_ausgang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:baselineAligned="false"
                android:text="@string/geraeteausgang_bestaetigen" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>